Implemented xct xaml namespace usage on all TabView sample pages

--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/NoContentPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/NoContentPage.xaml
@@ -2,33 +2,34 @@
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.NoContentPage"   
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.NoContentPage">
+    
     <pages:BasePage.Content>
         <StackLayout>
-            <controls:TabView
+            <xct:TabView
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 Margin="12">
-                <controls:TabViewItem
+                <xct:TabViewItem
                     Icon="triangle.png"
                     Text="Tab 1"
                     TextColor="White"
                     TextColorSelected="Yellow"
                     FontSize="12">
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     Icon="circle.png"
                     Text="Tab 2"
                     TextColor="White"
                     TextColorSelected="Yellow"
                     FontSize="12">
-                </controls:TabViewItem>
-            </controls:TabView>
-            <controls:TabView
+                </xct:TabViewItem>
+            </xct:TabView>
+            <xct:TabView
                 x:Name="TabView"
                 TabStripPlacement="Bottom"
                 TabStripHeight="60"
@@ -36,12 +37,12 @@
                 TabIndicatorHeight="50"
                 TabIndicatorWidth="100"
                 Margin="12">
-                <controls:TabView.TabStripBackgroundView>
+                <xct:TabView.TabStripBackgroundView>
                     <BoxView
                         CornerRadius="24"
                         BackgroundColor="Blue"/>
-                </controls:TabView.TabStripBackgroundView>
-                <controls:TabViewItem
+                </xct:TabView.TabStripBackgroundView>
+                <xct:TabViewItem
                     x:Name="Tab1"
                     Icon="triangle.png"
                     Text="Tab 1"
@@ -51,24 +52,24 @@
                     BadgeBackgroundColor="Red"
                     BadgeTextColor="White"
                     FontSize="12">
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     x:Name="Tab2"
                     Icon="circle.png"
                     Text="Tab 2"
                     TextColor="White"
                     TextColorSelected="Yellow"
                     FontSize="12">
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     x:Name="Tab3"
                     Icon="square.png"
                     Text="Tab 3"
                     TextColor="White"
                     TextColorSelected="Yellow"
                     FontSize="12">
-                </controls:TabViewItem>
-            </controls:TabView>
+                </xct:TabViewItem>
+            </xct:TabView>
         </StackLayout>
     </pages:BasePage.Content>
 </pages:BasePage>
