--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/GettingStartedPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/GettingStartedPage.xaml
@@ -2,18 +2,19 @@
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.GettingStartedPage" 
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.GettingStartedPage">
+    
     <pages:BasePage.Content>
         <Grid>
-            <controls:TabView
+            <xct:TabView
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow">
-                <controls:TabViewItem
+                <xct:TabViewItem
                     Icon="triangle.png"
                     Text="Tab 1"
                     TextColor="White"
@@ -26,8 +27,8 @@
                             VerticalOptions="Center"
                             Text="TabContent1" />
                     </Grid>
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     Icon="circle.png"
                     Text="Tab 2"
                     TextColor="White"
@@ -39,8 +40,8 @@
                             VerticalOptions="Center"
                             Text="TabContent2" />
                     </Grid>
-                </controls:TabViewItem>
-            </controls:TabView>
+                </xct:TabViewItem>
+            </xct:TabView>
         </Grid>
     </pages:BasePage.Content>
 </pages:BasePage>
