--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/IsTabStripVisiblePage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/IsTabStripVisiblePage.xaml
@@ -2,12 +2,13 @@
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.IsTabStripVisiblePage"  
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.IsTabStripVisiblePage"  >
+    
     <pages:BasePage.Content>
         <Grid>
-            <controls:TabView
+            <xct:TabView
                 x:Name="TabView"
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
@@ -15,7 +16,7 @@
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow"
                 IsTabStripVisible="False">
-                <controls:TabViewItem
+                <xct:TabViewItem
                     Icon="triangle.png"
                     Text="Tab 1"
                     TextColor="White"
@@ -28,8 +29,8 @@
                             VerticalOptions="Center"
                             Text="TabContent1" />
                     </Grid>
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     Icon="circle.png"
                     Text="Tab 2"
                     TextColor="White"
@@ -41,8 +42,8 @@
                             VerticalOptions="Center"
                             Text="TabContent2" />
                     </Grid>
-                </controls:TabViewItem>
-            </controls:TabView>
+                </xct:TabViewItem>
+            </xct:TabView>
         </Grid>
     </pages:BasePage.Content>
 </pages:BasePage>
