--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/NestedTabsPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/NestedTabsPage.xaml
@@ -2,31 +2,32 @@
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"    
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.NestedTabsPage" 
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages" >
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.NestedTabsPage" >
+    
     <pages:BasePage.Content>
         <Grid>
-            <controls:TabView 
+            <xct:TabView 
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow">
-                <controls:TabViewItem
+                <xct:TabViewItem
                     Icon="triangle"
                     Text="Tab 1"
                     TextColor="White"
                     TextColorSelected="Yellow"
                     FontSize="12">
-                    <controls:TabView 
+                    <xct:TabView 
                         TabStripPlacement="Top"
                         TabStripBackgroundColor="Blue"
                         TabStripHeight="60"
                         TabIndicatorPlacement="Top"
                         TabIndicatorColor="Yellow"
                         TabContentBackgroundColor="Yellow">
-                        <controls:TabViewItem
+                        <xct:TabViewItem
                             Icon="triangle.png"
                             Text="Tab 1"
                             TextColor="White"
@@ -39,8 +40,8 @@
                                     VerticalOptions="Center"
                                     Text="TabContent1" />
                             </Grid>
-                        </controls:TabViewItem>
-                        <controls:TabViewItem
+                        </xct:TabViewItem>
+                        <xct:TabViewItem
                             Icon="circle.png"
                             Text="Tab 2"
                             TextColor="White"
@@ -52,10 +53,10 @@
                                     VerticalOptions="Center"
                                     Text="TabContent2" />
                             </Grid>
-                        </controls:TabViewItem>
-                    </controls:TabView>
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                        </xct:TabViewItem>
+                    </xct:TabView>
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     Icon="circle.png"
                     Text="Tab 2"
                     TextColor="White"
@@ -67,8 +68,8 @@
                             VerticalOptions="Center"
                             Text="TabContent2" />
                     </Grid>
-                </controls:TabViewItem>
-            </controls:TabView>
+                </xct:TabViewItem>
+            </xct:TabView>
         </Grid>
     </pages:BasePage.Content>
 </pages:BasePage>
