--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/TabBadgePage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/TabBadgePage.xaml
@@ -2,9 +2,10 @@
 <pages:BasePage 
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.TabBadgePage"
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.TabBadgePage">
+    
     <pages:BasePage.Content>
         <Grid
             RowSpacing="0">
@@ -12,14 +13,14 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <controls:TabView
+            <xct:TabView
                 Grid.Row="0"
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow">
-                <controls:TabViewItem
+                <xct:TabViewItem
                     Icon="triangle.png"
                     IconSelected="square.png"
                     Text="Tab 1"
@@ -38,8 +39,8 @@
                             VerticalOptions="Center"
                             Text="TabContent1" />
                     </Grid>
-                </controls:TabViewItem>
-                <controls:TabViewItem 
+                </xct:TabViewItem>
+                <xct:TabViewItem 
                     Icon="circle.png"
                     IconSelected="square"
                     Text="Tab 2"
@@ -59,8 +60,8 @@
                             VerticalOptions="Center"
                             Text="TabContent2" />
                     </Grid>
-                </controls:TabViewItem>
-            </controls:TabView>
+                </xct:TabViewItem>
+            </xct:TabView>
             <StackLayout
                 Grid.Row="1"
                 Padding="12">
