--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/TabItemAnimationPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/TabItemAnimationPage.xaml
@@ -2,10 +2,11 @@
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.TabItemAnimationPage"
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.TabView"
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabView.TabItemAnimationPage">
+    
     <ContentPage.Resources>
         <ResourceDictionary>
 
@@ -39,7 +40,7 @@
 
             <Style
 		        x:Key="TabItemStyle"
-		        TargetType="controls:TabViewItem">
+		        TargetType="xct:TabViewItem">
                 <Setter
 			        Property="ControlTemplate"
 			        Value="{StaticResource TabItemTemplate}" />
@@ -58,19 +59,19 @@
     </ContentPage.Resources>
     <ContentPage.Content>
         <Grid>
-            <controls:TabView 
+            <xct:TabView 
                 TabStripPlacement="Bottom"
                 TabStripBackgroundColor="Blue"
                 TabStripHeight="60"
                 TabIndicatorColor="Yellow"
                 TabContentBackgroundColor="Yellow">
-                <controls:TabViewItem
+                <xct:TabViewItem
                     Icon="triangle.png"
                     Text="Tab 1"
                     Style="{StaticResource TabItemStyle}">
-                    <controls:TabViewItem.TabAnimation>
+                    <xct:TabViewItem.TabAnimation>
                         <local:CustomTabViewItemAnimation />
-                    </controls:TabViewItem.TabAnimation>
+                    </xct:TabViewItem.TabAnimation>
                     <Grid 
                         BackgroundColor="Gray">
                         <Label
@@ -78,22 +79,22 @@
                             VerticalOptions="Center"
                             Text="TabContent1" />
                     </Grid>
-                </controls:TabViewItem>
-                <controls:TabViewItem
+                </xct:TabViewItem>
+                <xct:TabViewItem
                     Icon="circle.png"
                     Text="Tab 2"
                     Style="{StaticResource TabItemStyle}">
-                    <controls:TabViewItem.TabAnimation>
+                    <xct:TabViewItem.TabAnimation>
                         <local:CustomTabViewItemAnimation />
-                    </controls:TabViewItem.TabAnimation>
+                    </xct:TabViewItem.TabAnimation>
                     <Grid>
                         <Label    
                             HorizontalOptions="Center"
                             VerticalOptions="Center"
                             Text="TabContent2" />
                     </Grid>
-                </controls:TabViewItem>
-            </controls:TabView>
+                </xct:TabViewItem>
+            </xct:TabView>
         </Grid>
     </ContentPage.Content>
 </pages:BasePage>
