--- a/XamarinCommunityToolkitSample/Pages/Views/TabView/TabViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/TabView/TabViewPage.xaml
@@ -2,6 +2,7 @@
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.TabViewPage"  
     xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages" 
     xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views"
